@@ -8,31 +8,36 @@ module ActiveMerchant #:nodoc:
       def info
         (@params['PayerInfo']||{})
       end
-      
+
+      def details
+        (@params['PaymentDetails']||{})
+      end
+
       def name
         payer = (info['PayerName']||{})
         [payer['FirstName'], payer['MiddleName'], payer['LastName']].compact.join(' ')
       end
-      
+
       def token
         @params['Token']
       end
-      
+
       def payer_id
         info['PayerID']
       end
-      
+
       def payer_country
         info['PayerCountry']
       end
-      
-      # PayPal returns a contact telephone number only if your Merchant account profile settings require that the buyer enter one.
+
+      # PayPal returns a contact telephone number only if your Merchant account
+      # profile settings require that the buyer enter one.
       def contact_phone
         @params['ContactPhone']
       end
-      
+
       def address
-        address = (@params['PaymentDetails']||{})['ShipToAddress']
+        address = (details['ShipToAddress']||{})
         {  'name'       => address['Name'],
            'company'    => info['PayerBusiness'],
            'address1'   => address['Street1'],
@@ -44,7 +49,7 @@ module ActiveMerchant #:nodoc:
            'phone'      => (contact_phone || address['Phone'])
         }
       end
-      
+
       def shipping
         shipping = (@params['UserSelectedOptions']||{})
         {  'amount'   => shipping['ShippingOptionAmount'],
