@@ -14,6 +14,7 @@
 * DataCash: Update test Mastercard number [jamesshipton]
 * DataCash: Update test response fixtures [jamesshipton]
 * Pin: Add Pin.js card token support [nagash]
+* PayPal Express gateway: Fix error when no address information is in response [pierre]
 
 == Version 1.31.1 (February 25, 2013)
 
